force-app/main/default/objects/EmailTemplateLogoId__c/EmailTemplateLogoId__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To get WM Logo</description>
    <label>EmailTemplateLogoId</label>
</CustomObject>