force-app/main/default/objects/EmailTemplateLogoId__c/fields/Approve_and_Reject_link__c.field-meta.xml
<CustomField>
    <fullName>Approve_and_Reject_link__c</fullName>
    <description>Link of the email to approve or reject</description>
    <label>Approve and Reject link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>