force-app/main/default/objects/EmailTemplateLogoId__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <description>Id of the Document</description>
    <label>DocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>