force-app/main/default/objects/EmailTemplateLogoId__c/fields/LineId__c.field-meta.xml
<CustomField>
    <fullName>LineId__c</fullName>
    <label>LineId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>