force-app/main/default/objects/EmailTemplateLogoId__c/fields/TruckId__c.field-meta.xml
<CustomField>
    <fullName>TruckId__c</fullName>
    <label>TruckId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>